--- a/python/Views/App/Index.html
+++ b/python/Views/App/Index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/css/tailwinds.out.css">
+        <link rel="stylesheet" href="/Static/css/tailwinds.out.css">
     </head>
     <body>
         <div class="h-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-5">
