[Bug] Fixed menu icon not displaying

--- a/dotnet/Views/Shared/_Layout.cshtml
+++ b/dotnet/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
             <nav class="px-3 sm:px-20 md:px-40 xl:px-96 py-3">
                 <div class="flex gap-3">
                     <div class="my-auto cursor-pointer p-4 -ml-4 hover:text-blue-500">
-                        <partial name="/wwwroot/icons/menu.cshtml" model='"h-6 w-6"' />
+                        <partial name="~/wwwroot/icons/menu.cshtml" model='"h-6 w-6"' />
                     </div>
                     <img src="~/icons/logo.png" alt="logo" class="w-28 h-14" />
                 </div>
